projeto poema finalizado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <h1>Ó Sino da Minha Aldeia</h1>
-        <p>Por Fernando Pessoa</p>
+        <p>
+            Por <a href="http://arquivopessoa.net/textos/206" target="_blank">Fernando Pessoa</a>
+        </p>
     </header>
     <section>
         <pre>
@@ -48,7 +50,9 @@
     </section>
 
     <footer>
-        <p>Site criado por Gabriel para Gustavo Guanabara.</p>
+        <p>
+            Site criado por <a href="https://github.com/cruzgb" target="_blank">Gabriel Cruz</a> para <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a>.
+        </p>
     </footer>
 </body>
 </html>
